--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <center>
+        <ul class="menu">
+            <li class="links"><a href="#welcome">HOME</a></li>
+            <li class="links"><a href="#bio">ABOUT</a></li>
+            <li class="links"><a href="#videos">VIDEOS</a></li>
+            <li class="links"><a href="#apps">APPS</a></li>
+            <li class="links"><a href="#games">GAMES</a></li>
+            <li class="links"><a href="#chatbot">CHATBOT</a></li>
+            <li class="links"><a href="#contact">CONTACT</a></li>
+        </ul>
+    </center>
     <section id="welcome">
         <div class="parallax-inner">
             <img src="moi.JPG" class="profile">
@@ -22,6 +33,31 @@
         <p>
             Hi My name is zakaria. im a video game lover.my favorite game is minecraft and my username is DirtBoy606 if you want to play with me. i have 2 cats one azule and one blossom.i have a PS4,GoPro hero 9, and a iphone and ipad.
         </p>
+    </section>
+    <section id="videos">
+        <h1>Videos</h1>
+        <div class="line"></div>
+        <br>
+    </section>
+    <section id="apps">
+        <h1>Apps</h1>
+        <div class="line"></div>
+        <br>
+    </section>
+    <section id="games">
+        <h1>Games</h1>
+        <div class="line"></div>
+        <br>
+    </section>
+    <section id="chatbot">
+        <h1>Chatbot</h1>
+        <div class="line"></div>
+        <br>
+    </section>
+    <section id="contact">
+        <h1>Contact</h1>
+        <div class="line"></div>
+        <br>
     </section>
 </body>
 
