--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <h1>Videos</h1>
         <div class="line"></div>
         <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AHfq-1_HeaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cjM3bPKxbxQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section id="apps">
         <h1>Apps</h1>
