--- a/index.html
+++ b/index.html
@@ -46,16 +46,26 @@
         <h1>Apps</h1>
         <div class="line"></div>
         <br>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/U9GqCIL0XOiUz7yDPscg6MxKAz79NVhbwa3A8RputlH/embed?nosource"></iframe>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/Yr7XCBOAhwXMn4eHo-YLOrD77G7TKZdOdpKBiYiOVMH/embed?nosource"></iframe>
     </section>
     <section id="games">
         <h1>Games</h1>
         <div class="line"></div>
         <br>
+        <a href="https://studio.code.org/projects/playlab/pMqtFW0wDAtTEuHkO-pz0NmxMsoMrjPgs4yjlLdAChE" target="_blank">
+            <img src="Game1.png" id="game1">
+        </a>
+        <a href="https://studio.code.org/projects/flappy/DfCtUMFqm7oeonujmf5sHGNS9o26yTKRhBk0RoOVS_g" target="_blank">
+            <img src="Game2.png" id="game2">
+        </a>
     </section>
     <section id="chatbot">
         <h1>Chatbot</h1>
         <div class="line"></div>
         <br>
+        <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/ff690efd-b9ab-4d96-a65e-cf5b383a585f">
+        </iframe>
     </section>
     <section id="contact">
         <h1>Contact</h1>
