--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zakaria Kendrick</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bf6b83dd3c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         <h1>Hi!</h1>
         <div class="line"></div>
         <p>
-            Hi My name is zakaria. im a video game lover.my favorite game is minecraft and my username is DirtBoy606 if you want to play with me. i have 2 cats one azule and one blossom.i have a PS4,GoPro hero 9, and a iphone and ipad.
+            Hi My name is zakaria. im a video game lover.my favorite game is minecraft and my username is DirtDaBoi606 if you want to play with me. i have 2 cats one azule and one blossom.i have a PS4,GoPro hero 9, and a iphone and ipad.Ilove sleepovers and many cool toys.my favorite is nerf.its like when you have a toy gun and you shoot it.i love water parks they make me feel good and great.
         </p>
     </section>
     <section id="videos">
@@ -71,6 +72,12 @@
         <h1>Contact</h1>
         <div class="line"></div>
         <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3715.0516795861067!2d-157.94457648506125!3d21.387869685804915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c0068ad11eae82b%3A0x5e46ac82cbee7b8c!2sPearlridge%20Sunset!5e0!3m2!1sen!2sus!4v1626552616953!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="contact_1">
+            <a href="mailto:kendrick.booboo@gmail.com?Subject=Hello">
+                <i class="fab fa-mailchimp"></i>&nbsp;&nbsp;<h3>kendrick.booboo@gmail.com</h3>
+            </a>
+        </div>
     </section>
 </body>
 
